# ZYGROS-PRIME

./: .bash_history  30_day_journal_template.md  CSI_V2_README.md  Complete_Event_Ledger.dat.txt  Conzetian Constant Formula and Declaration _251227_193511.pdf.ots  DEPLOYMENT_READY.md  Ghostmode_251225_105222.txt.ots  HTC_251227_020418.txt.ots  HTC_48_HOUR_SPRINT.md  HTC_CHECKPOINT_v1.md  HTC_FORMAL_SPEC.md  HTC_OPERATOR_PLAYBOOK.md  InfinityDecree002_251229_094902.txt.ots  InfinityDecree003_251229_095945.txt.ots  InfinityDecree004_251229_100536.txt.ots  InfinityDecree005_251229_103403.txt.ots  InfinityDecree006_251229_110419.txt.ots  InfinityDecree007_251229_111630.txt.ots  InfintyDecree001_251229_092827.txt.ots  MAX_PROFIT_251225_110638.txt.ots  PHOENIX_GODMODE_vΩ_METAPROMPT.txt  PHOENIX_HYPERON_BRIDGE_INDEX.json  PHOENIX_KNOWLEDGE_GRAPH.json  PHOENIX_KNOWLEDGE_SUMMARY.md  PHOENIX_OMEGA_ARCHIVE_2025-12-27.txt  PHOENIX_OMEGA_LEDGER.json  PHONE_DEPLOYMENT.md  README.md  SECURITY.md  The infinite architects decree_251229_084745.txt.ots  The_Kybalion_Deciphered.md  UNIVERSAL COORDINATION BROADCAST SYSTEM_251225_114753.txt.ots  csi_dashboard.html  deep_scan_downloaded_results.json  deep_scan_results.json  deploy_both.sh  deploy_csi.sh  deploy_phoenix.sh  master_modules_engines_index.csv  master_modules_engines_index.json  (+15 more)
Unpacked/phoenix_chimera_repo/phoenix_chimera_repo/: LICENSE  README.md  pyproject.toml
Unpacked/phoenix_chimera_repo/phoenix_chimera_repo/chimera/: app.py
Unpacked/phoenix_chimera_repo/phoenix_chimera_repo/docs/: VOICE_CODEX.html  VOICE_CODEX.md
(+2501 files in other folders)
